--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -53,6 +53,20 @@ page {
   color: black;
 }
 
+/* 地铁按钮样式 */
+.metro-button-container {
+  margin-top: 60rpx;
+  width: 80%;
+}
+
+.metro-button {
+  background-color: #1890ff;
+  color: white;
+  font-size: 28rpx;
+  border-radius: 50rpx;
+  margin: 0;
+}
+
 .nickname-label {
   width: 105px;
 }
