--- a/miniprogram/pages/metro/metro.wxml
+++ b/miniprogram/pages/metro/metro.wxml
@@ -4,14 +4,14 @@
   <view class="metro-map-container">
     <image 
       class="metro-map"
-      src="../../assets/images/map.jpg"
+      src="../../assets/images/metro-map-new.jpg"
       mode="aspectFit"
       bindload="onMapImageLoad"
       binderror="onMapImageError"
     ></image>
     <!-- 调试：显示当前使用的路径 -->
     <view class="debug-info" style="position: absolute; top: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 10px; font-size: 12px;">
-      图片路径: ../../assets/images/map.jpg
+      图片路径: ../../assets/images/metro-map-new.jpg
     </view>
   </view>
   
