--- a/miniprogram/pages/metro/metro.wxml
+++ b/miniprogram/pages/metro/metro.wxml
@@ -6,15 +6,12 @@
       class="metro-map-movable"
       direction="all"
       scale
-      scale-min="{{scaleMin}}"
-      scale-max="{{scaleMax}}"
-      scale-value="{{scaleValue}}"
+      scale-min="0.5"
+      scale-max="3"
+      scale-value="1"
       out-of-bounds
       inertia
-      damping="{{damping}}"
-      friction="{{friction}}"
       bindscale="onScale"
-      bindchange="onChange"
     >
       <image 
         class="metro-map"
