--- a/miniprogram/pages/metro/metro.wxss
+++ b/miniprogram/pages/metro/metro.wxss
@@ -50,24 +50,18 @@ page {
   position: relative;
   border-bottom: 1rpx solid #eeeeee;
   width: 100%;
-  height: 50vh;
 }
 
 /* 可移动视图容器 */
 .metro-map-movable {
-  width: 100%;
+  width: 750rpx;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .metro-map {
-  width: 100%;
-  height: auto;
+  width: 750rpx;
+  height: 500rpx;
   display: block;
-  max-width: none;
-  max-height: none;
 }
 
 .map-placeholder {
