--- a/miniprogram/pages/metro/metro.wxss
+++ b/miniprogram/pages/metro/metro.wxss
@@ -52,15 +52,15 @@ page {
   width: 100%;
 }
 
-/* 可移动视图容器 */
+/* 可移动视图容器 - 让它比容器大，这样可以拖动查看超出部分 */
 .metro-map-movable {
-  width: 750rpx;
-  height: 100%;
+  width: 150%;
+  height: 150%;
 }
 
 .metro-map {
-  width: 750rpx;
-  height: 500rpx;
+  width: 100%;
+  height: 100%;
   display: block;
 }
 
