fix: 修复缩放动画时长问题

--- a/miniprogram/pages/metro/metro.wxml
+++ b/miniprogram/pages/metro/metro.wxml
@@ -11,7 +11,8 @@
       scale-value="{{scaleValue}}"
       out-of-bounds
       inertia
-      animation="{{true}}"
+      animation="{{useAnimation}}"
+      duration="{{animationDuration}}"
       bindscale="onScale"
     >
       <image 
