--- a/miniprogram/pages/metro/metro.wxml
+++ b/miniprogram/pages/metro/metro.wxml
@@ -30,7 +30,7 @@
   <view class="transfer-container">
     <!-- 左侧：线路列表 -->
     <view class="line-list">
-      <view class="section-title">选择出发线路</view>
+      <view class="section-title">地铁线</view>
       <scroll-view scroll-y class="scrollable">
         <view 
           wx:for="{{lines}}" 
@@ -47,7 +47,7 @@
     
     <!-- 中间：站点列表 -->
     <view class="station-list" wx:if="selectedLine">
-      <view class="section-title">选择出发站点</view>
+      <view class="section-title">站点</view>
       <scroll-view scroll-y class="scrollable">
         <view 
           wx:for="{{stationsByLine[selectedLine]}}" 
@@ -72,7 +72,23 @@
     
     <!-- 右侧：换乘信息 -->
     <view class="transfer-info">
-      <view class="section-title">换乘信息</view>
+          <!-- 换乘线路选择 -->
+          <view class="transfer-line-selection" wx:if="selectedStation && selectedStation.transfers.length > 0">
+        <text class="selection-title">选择换乘线路：</text>
+        <view class="transfer-line-buttons">
+          <button 
+            wx:for="{{selectedStation.transfers}}" 
+            wx:key="index"
+            class="transfer-line-btn"
+            size="mini"
+            data-line-id="{{item}}"
+            bindtap="getTransferInfo"
+          >
+            {{item}}号线
+          </button>
+        </view>
+      </view>
+      <view >换乘信息</view>
       <view class="info-content" wx:if="showTransferInfo && currentTransferInfo">
         <view class="info-item">
           <text class="info-label">出发线路：</text>
@@ -98,23 +114,6 @@
       <view class="info-content-empty" wx:else>
         <text wx:if="selectedStation">请选择要换乘的线路</text>
         <text wx:else>请先选择线路和站点</text>
-      </view>
-      
-      <!-- 换乘线路选择 -->
-      <view class="transfer-line-selection" wx:if="selectedStation && selectedStation.transfers.length > 0">
-        <text class="selection-title">选择换乘线路：</text>
-        <view class="transfer-line-buttons">
-          <button 
-            wx:for="{{selectedStation.transfers}}" 
-            wx:key="index"
-            class="transfer-line-btn"
-            size="mini"
-            data-line-id="{{item}}"
-            bindtap="getTransferInfo"
-          >
-            {{item}}号线
-          </button>
-        </view>
       </view>
     </view>
   </view>
