--- a/miniprogram/pages/metro/metro.wxss
+++ b/miniprogram/pages/metro/metro.wxss
@@ -259,6 +259,36 @@ page {
   font-size: 28rpx;
 }
 
+/* 列车方向选择 */
+.direction-selection {
+  margin-bottom: 20rpx;
+  padding-bottom: 20rpx;
+  border-bottom: 1rpx solid #eeeeee;
+}
+
+.direction-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10rpx;
+}
+
+.direction-btn {
+  font-size: 24rpx !important;
+  margin: 0 !important;
+  padding: 0 15rpx !important;
+  height: 60rpx !important;
+  line-height: 60rpx !important;
+  background-color: #f5f5f5 !important;
+  color: #666666 !important;
+  border: 1rpx solid #dddddd !important;
+}
+
+.direction-btn.selected {
+  background-color: #1890ff !important;
+  color: #ffffff !important;
+  border: 1rpx solid #1890ff !important;
+}
+
 /* 换乘线路选择 */
 .transfer-line-selection {
   margin-top: 0rpx;
