--- a/miniprogram/pages/metro/metro.wxss
+++ b/miniprogram/pages/metro/metro.wxss
@@ -250,6 +250,16 @@ page {
   flex: 1;
 }
 
+/* 没有选择站点时的提示 */
+.no-station-tip {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #999999;
+  font-size: 28rpx;
+}
+
 .info-content-empty {
   flex: 1;
   display: flex;
